tests/ui/coroutine/layout-error.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/layout-error.rs:27:17
   |
LL |         let a = Foo;
   |                 ^^^ not found in this scope

error[E0391]: cycle detected when computing type of `POOL`
  --> $DIR/layout-error.rs:34:14
   |
LL | static POOL: Task<F> = Task::new();
   |              ^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `Task<F>: core::marker::Sync`...
note: ...which requires computing type of opaque `F::{opaque#0}`...
  --> $DIR/layout-error.rs:19:14
   |
LL | pub type F = impl Future;
   |              ^^^^^^^^^^^
note: ...which requires borrow-checking `foo`...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires promoting constants in MIR for `foo`...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires checking if `foo` contains FFI-unwind calls...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires building MIR for `foo`...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires match-checking `foo`...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires type-checking `foo`...
  --> $DIR/layout-error.rs:22:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
   = note: ...which again requires computing type of `POOL`, completing the cycle
note: cycle used when checking that `POOL` is well-formed
  --> $DIR/layout-error.rs:34:1
   |
LL | static POOL: Task<F> = Task::new();
   | ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of `POOL`
  --> $DIR/layout-error.rs:34:14
   |
LL | static POOL: Task<F> = Task::new();
   |              ^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `Task<F>: core::marker::Sync`...
note: ...which requires computing type of opaque `F::{opaque#0}`...
  --> $DIR/layout-error.rs:19:14
   |
LL | pub type F = impl Future;
   |              ^^^^^^^^^^^
note: ...which requires computing the opaque types defined by `POOL`...
  --> $DIR/layout-error.rs:34:1
   |
LL | static POOL: Task<F> = Task::new();
   | ^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `POOL`, completing the cycle
note: cycle used when checking that `POOL` is well-formed
  --> $DIR/layout-error.rs:34:1
   |
LL | static POOL: Task<F> = Task::new();
   | ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0391, E0425.
For more information about an error, try `rustc --explain E0391`.
